[package]
name = "morse_code"
version = "0.0.0"
authors = ["Damon Marc Rocha <dmarcr1997@gmail.com>", "@RandyMcMillan <randy.lee.mcmillan@gmail.com>"]
description = "encode and decode Morse code"
edition = "2018"
homepage = "https://github.com/randymcmillan/morse_code"
repository = "https://github.com/randymcmillan/morse_code.git"
documentation = "https://docs.rs/morse_code"
readme = "README.md"
keywords = [ "morse", "code", "morse-code"]
license = "MIT"
[dependencies]
